2006-02-20  Mark Wielaard  <mark@klomp.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(begin_drawing_operation): Output stacktrace and return on bad cairo
	status.
	(end_drawing_operation): Likewise. And reset cairo_t.

2006-02-20  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultEditorKit.java: Fixed comparison
	in backward selection action.

2006-02-20  Olivier Jolly  <olivier.jolly@pcedev.com>

	* java/lang/reflect/Proxy.java:
	(ProxyData.getProxyData): Skipped overriding of core methods.
	(ProxyData.isCoreObjectMethod): New method.

2006-02-20  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/charset/Provider.java (Provider): Package private.

2006-02-20  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/Option.java: New class.

2006-02-20  Lillian Angel  <langel@redhat.com>

	* java/swt/Window.java
	(show): Calling show() on the owned windows caused problems.
	Changed back to get the peer and call setVisible.

2006-02-20  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTextUI.java
	(damageRange): Implemented this method.

2006-02-20  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/GapContent.java:
	(shiftGapEndUp): Corrected new mark value.
	* javax/swing/text/AbstractDocument.java:
	(remove): Changed order of operations.

2006-02-20  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/GapContent.java:
	(shiftGapEndUp): Reverted.
	* javax/swing/text/AbstractDocument.java:
	(remove): Reverted.

2006-02-20  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/GapContent.java:
	(shiftGapEndUp): Corrected new mark value.
	* javax/swing/text/AbstractDocument.java:
	(remove): Changed order of operations.

2006-02-20  Mark Wielaard  <mark@klomp.org>

	* java/awt/Menu.java (add(MenuItem)): Use item.getParent() to get
	parent field.
	(insert): Likewise.
	(addNotify): Add the item after addNotifying it.